<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_executer</name>
  <version>0.0.0</version>
  <description>Package that implements high-level skills using Behavior Trees.</description>
  <maintainer email="michele.ferrari@unibs.it">Michele Ferrari</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <depend>behaviortree_ros2</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cnr_param</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
